--- a/index.html
+++ b/index.html
@@ -7,89 +7,31 @@
     <link rel="stylesheet" href="css/tailwind.css" />
     <script src="//unpkg.com/alpinejs" defer></script>
     <title>TailwindCSS Boilerplate</title>
+    <style>
+      [x-cloak] {
+        display: none !important;
+      }
+    </style>
   </head>
-  <body class="bg-indigo-700">
-    <div class="mt-20 flex flex-col items-center" x-cloak>
-      <h1 class="mb-10 text-center font-bree text-4xl text-gray-100">
-        Welcome to Alpine JS
+  <body class="bg-indigo-700" id="body">
+    <div class="mt-20 flex flex-col items-center justify-center">
+      <h1
+        class="mb-10 w-full px-10 text-center font-bree text-4xl text-gray-100 md:w-1/2 md:px-2"
+      >
+        Image Gallery with TailwindCSS & Alpine JS
       </h1>
 
-      <!-- <div class="w-1/2 rounded-md" x-data="{open:false}">
-        <p class="overflow-hidden">
-          <a
-            href="#"
-            :class="open?'bg-blue-600':''"
-            class="block w-full overflow-hidden bg-blue-500 px-4 py-2 text-white"
-            @click="open=!open"
-            >How we are going to use alpinejs?
-          </a>
-        </p>
-        <p
-          class="overflow-hidden bg-gray-100 p-4 text-gray-800"
-          x-show="open"
-          x-transition=""
-        >
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quos ad
-          repellendus rem vel minima, doloremque iure doloribus at maiores omnis
-          veritatis quaerat eos quae debitis unde, voluptatibus ipsa ipsum!
-        </p>
-      </div> -->
-
-      <!-- x-text -->
-      <!-- <div
-        class="mt-4 w-1/2 bg-neutral-100 p-4"
-        x-data="{para:' Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quos ad repellendus rem vel minima, doloremque iure doloribus at maiores omnis veritatis quaerat eos quae debitis unde, voluptatibus ipsa ipsum!'}"
+      <div
+        x-data="{ total: 3, current: 0, open: false, stopOverflow(){ document.getElementById('body').style.overflowY='hidden' } }"
+        x-cloak
       >
-        <p>Dynamic paragraph : <span x-text="para"></span></p>
-      </div> -->
-
-      <!-- x-model  -->
-      <!-- <div class="mt-4 w-1/2" x-data="{search:''}">
-        <input
-          type="text"
-          class="w-1/3 rounded-md px-3 py-2"
-          placeholder="x-model example"
-          x-model="search"
-        />
-        <p class="mt-2 py-3 text-white">
-          <span x-text="search"> </span>
-        </p>
-      </div> -->
-      <!-- x-for -->
-      <!-- <div
-        class="mt-3 w-1/2"
-        x-data="{books: [
-        {
-        title: 'The subtle art of not giving a fuck',
-        author: 'Mark Manson' 
-        },
-        {
-        title: 'The lean startup',
-        author: 'Eric Ries' 
-        },
-      ]}"
-      >
-        <h2 class="py-2 text-2xl font-bold text-white">Books</h2>
-        <template x-for="book in books">
-          <p class="text-white">
-            <span x-text="book.title" class="mr-2"></span> By
-            <span x-text="book.author"></span>
-          </p>
-        </template>
-      </div> -->
-
-      <!-----
-  add this code to this very first div:
-  fixed inset-0 z-10
--->
-      <div x-data="{ total: 3, current: 0, open: false }">
         <div
           class="flex w-full flex-col space-x-0 space-y-5 md:flex-row md:space-y-0 md:space-x-5"
         >
           <img
             width="200"
             class="transform cursor-pointer rounded-lg object-cover transition-all duration-300 hover:scale-105"
-            @click="current = 0, open = true"
+            @click="current = 0, open = true, stopOverflow()"
             src="https://images.unsplash.com/photo-1583262428949-7d9f74ca3657?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
           />
           <img
@@ -108,29 +50,14 @@
 
         <div
           x-show="open"
-          class="absolute top-0 right-0 flex h-full w-full items-center justify-center overflow-hidden overflow-y-auto bg-gray-700/40 p-4"
-          aria-labelledby="modal-title"
-          role="dialog"
-          aria-modal="true"
+          class="absolute top-0 right-0 flex min-h-full w-full items-center justify-center overflow-hidden overflow-y-auto bg-gray-700/40 p-5 md:p-4"
         >
           <div
-            class="flex min-w-full items-end justify-center px-20 pt-4 pb-20 text-center sm:block sm:p-0"
+            class="flex w-full items-end justify-center pt-4 text-center sm:block sm:p-0 md:px-20 md:pb-20"
           >
-            <!-- <div
-            class="bg-gray-500 bg-opacity-75 transition-opacity"
-            aria-hidden="true"
-          ></div>
-
-          <span
-            class="sm: hidden sm:inline-block sm:align-middle"
-            aria-hidden="true"
-            >​</span
-          > -->
-
-            <!--Modal panel : This is where you put the pop-up's content, the div on top this coment is the wrapper -->
             <div
               @click.away="open = false"
-              class="relative inline-block w-full transform overflow-hidden rounded-lg bg-white p-5 text-left align-bottom shadow-2xl transition-all sm:my-8 sm:w-full sm:max-w-xl sm:align-middle lg:min-w-[1280px] lg:p-5"
+              class="relative inline-block w-full transform rounded-lg bg-white p-5 text-left align-bottom shadow-2xl transition-all sm:my-8 sm:w-full sm:max-w-xl sm:align-middle lg:min-w-[1024px] lg:p-5 xl:w-full"
             >
               <div class="flex flex-col items-center justify-center">
                 <img
@@ -145,7 +72,7 @@
                   x-show="current == 2"
                   src="https://images.unsplash.com/photo-1584306124080-3f88451d23d1?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
                 />
-                <div class="mx-auto mt-4 flex w-1/2 justify-between">
+                <div class="mx-auto mt-4 flex w-full justify-between md:w-1/2">
                   <div
                     class="flex cursor-pointer space-x-5"
                     @click="if(current >= 1){ current = current - 1}"
